# triangle-from-scratch

./: Cargo.toml  LICENSE.txt  README.md
crates/c-types/: Cargo.toml
crates/gl/: Cargo.toml
crates/gl/src/: lib.rs
crates/gl/src/bindings/: constants.rs  functions.rs  mod.rs
crates/win32/: Cargo.toml
crates/win32/src/: lib.rs  prelude.rs  str_util.rs  structs.rs
src/: c_types.rs  fragment.fs  lib.rs  main.rs  str_util.rs  vertex.vs  win32.rs
src/gl/: mod.rs
src/gl/bindings/: constants.rs  prelude.rs  typedefs.rs
src/win32/: c_macros.rs  constants.rs  extern_bindings.rs  mod.rs  structs.rs  typedefs.rs
