[package]
name = "triangle-from-scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
c-types = { path = "crates/c-types", package = "triangle-from-scratch-c-types" }
gl = { path = "crates/gl", package = "triangle-from-scratch-gl" }
win32 = { path = "crates/win32", package = "triangle-from-scratch-win32" }

[profile.release]
lto = "thin"

[workspace]
members = [
    "crates/*"
]
